<resources>
    <string name="app_name">FoodOrderingStaffApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">PRODUCT</string>
    <string name="order">ORDER</string>
    <string name="report">REPORT</string>
    <string name="delete_all">Delete All</string>
    <string name="add_item">Add Item</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="photo">Photo</string>
    <string name="reset">RESET</string>
    <string name="submit">SUBMIT</string>
    <string name="delete">DELETE</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="pending">Pending</string>
    <string name="ready">Ready</string>
    <string name="completed">Completed</string>
</resources>