<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageFragment">

    <ImageView
        android:id="@+id/iconProduct"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/foodicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtProduct"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/product"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconProduct" />

    <ImageView
        android:id="@+id/iconOrder"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/ordericon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProduct"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtOrder"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/order"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconOrder" />

    <ImageView
        android:id="@+id/iconReport"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/reporticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrder"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtReport"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/report"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconReport" />
</androidx.constraintlayout.widget.ConstraintLayout>